--- a/back-of-the-book/nextflow/nextflow.config
+++ b/back-of-the-book/nextflow/nextflow.config
@@ -1,18 +1,61 @@
+// Define default settings
 params {
-    fastq = 'data/sample.fastq'
+    // Default input path (can be overridden on the command line)
+    input = null
+    results = 'results'
 }
 
+// Configure process settings (e.g., executor, memory, container)
 process {
-    executor = 'local'
-    withName: test {
-        executor = 'test'
+    executor = 'local'       // Use the local machine for execution
+    cpus = 2                 // Default to 2 CPUs per process
+    memory = '2 GB'          // Default to 2 GB memory per process
+    time = '1h'              // Default to 1 hour max runtime
+}
+
+// Define profiles for different environments
+profiles {
+    standard {
+        // Default profile for local execution
+        process.executor = 'local'
     }
-    withName: docker {
-        executor = 'docker'
-        container = 'your-docker-image'
+
+    docker {
+        // Use Docker containers
+        process {
+            executor = 'docker'
+            container = 'ubuntu:20.04' // Example container image
+        }
+    }
+
+    slurm {
+        // Example configuration for SLURM clusters
+        process.executor = 'slurm'
+        process.queue = 'batch'
     }
 }
 
-docker {
-    enabled = true
+// Logging and reporting
+timeline {
+    enabled = true  // Enable timeline generation
+    overwrite = true  // Overwrite timeline file
+    file = "timeline.html"
+}
+
+trace {
+    enabled = true  // Enable trace file
+    overwrite = true  // Overwrite trace file
+    file = "trace.txt"
+}
+
+report {
+    enabled = true  // Enable report generation
+    overwrite = true  // Overwrite report file
+    file = "report.html"
+}
+
+dag {
+    enabled = true  // Enable workflow DAG generation
+    overwrite = true  // Overwrite DAG file
+    file = "dag.png"
 }
