simplify config file

--- a/bin/nextflow/nextflow.config
+++ b/bin/nextflow/nextflow.config
@@ -22,7 +22,7 @@ profiles {
         // Use Docker containers
         process {
             executor = 'docker'
-            container = 'ubuntu:20.04' // Example container image
+            container = 'ubuntu:jammy' // Example container image
         }
     }
 
@@ -31,29 +31,4 @@ profiles {
         process.executor = 'slurm'
         process.queue = 'batch'
     }
-}
-
-// Logging and reporting
-timeline {
-    enabled = true  // Enable timeline generation
-    overwrite = true  // Overwrite timeline file
-    file = "timeline.html"
-}
-
-trace {
-    enabled = true  // Enable trace file
-    overwrite = true  // Overwrite trace file
-    file = "trace.txt"
-}
-
-report {
-    enabled = true  // Enable report generation
-    overwrite = true  // Overwrite report file
-    file = "report.html"
-}
-
-dag {
-    enabled = true  // Enable workflow DAG generation
-    overwrite = true  // Overwrite DAG file
-    file = "dag.png"
 }
